--- a/index.html
+++ b/index.html
@@ -1,18 +1,51 @@
 <!DOCTYPE html>
-<charset lang="utf-8"></charset>
-<html>
+<html lang="pt-br">
     <head>
+        <meta charset="utf-8">
         <title>Amigão</title>
+        <link rel="stylesheet" href="estilo.css">
     </head>
     <body>
             <header>
-
+                <figure>
+                <!-- #PESQUISEI -->
+                    <img src="imagens/logo.png" alt="logotipo do Amigão" id="logo-topo">   
+                </figure>
+                <nav>
+                    <ul>
+                        <li>Home</li>
+                        <li>Sobre</li>
+                        <li>Adote</li>
+                        <li>Seja Voluntário</li>
+                    </ul>
+                </nav>
+                <p>amigao@email.com</p>
             </header>
             <main>
-                <p>Olá Mundo!</p>
+                <h1>Adote um amigo!</h1>
+                <!-- #CONSULTEI -->
+                <button type="submit">Fazer doação</button>
+                <button type="submit">Adotar um cachorrinho</button>
+                <p>
+                There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.
+                </p>
+                <p>
+                If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures, to generate Lorem Ipsum which looks reasonable. The generated Lorem Ipsum is therefore always free from repetition, injected humour, or non-characteristic words etc.                 
+                </p>
+                <button type="submit">Seja voluntário</button>
+                <img src="imagens/branco.png" id="bolota-aleatoria-com-img-branco">
+                <img src="imagens/cinza.png" id="bolota-aleatoria-com-img-cinza">
+
             </main>
             <footer>
-
+                <nav>
+                    <ul>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="sobre.html">Sobre</a></li>
+                        <li><a href="adote.html">Adote</a></li>
+                        <li><a href="sejavoluntario">Seja Voluntário</a></li>
+                    </ul>
+                </nav>
             </footer>
     </body>
 </html>
